# strava-segment-analyzer

./: .env.example  .gitignore  README.md  app.py  cache_manager.py  fix_efficiency.py  pyproject.toml  readiness.py  render.yaml  requirements.txt  run.py  storage.py
static/css/: style.css
static/js/: app.js  preloader.js  segment-analyzer.js  segment-history.js
templates/: base.html  error.html  index.html  segment_analyzer.html
tests/: test_readiness.py
